--- a/three_girls.ipynb
+++ b/three_girls.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c85aca03",
+   "id": "4ced1b17",
    "metadata": {},
    "source": [
     "## Exercises on the three-girl simulation problem\n",
     "\n",
-    "These exercises follow on from the three girls solution in [filling arrays](https://lisds.github.io/textbook/arrays/filling_arrays), and the [reply to the Supreme\n",
-    "Court](https://lisds.github.io/textbook/iteration/reply_supreme).\n",
+    "These exercises follow on from the three girls solution in [filling arrays](https://lisds.github.io/textbook/arrays/filling_arrays), and the [reply to the Supreme Court](https://lisds.github.io/textbook/iteration/reply_supreme).\n",
     "\n",
     "You may want to refer back to those pages for inspiration."
    ]
@@ -16,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1812b04",
+   "id": "4848ba1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +32,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9414a1",
+   "id": "89387d02",
    "metadata": {},
    "source": [
     "### Three girls in a family of four\n",
     "\n",
-    "Remember the solution to this problem, from [filling\n",
-    "arrays](https://lisds.github.io/textbook/arrays/filling_arrays)?  Here is a version of that\n",
-    "solution:\n",
+    "Consider the solution to this problem, from [filling arrays](https://lisds.github.io/textbook/arrays/filling_arrays)?  Here is a version of that solution:\n",
     "\n",
     "As usual, we first build a single trial, to make sure we are on the right track."
    ]
@@ -48,12 +45,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d6b887",
+   "id": "d73c9531",
    "metadata": {},
    "outputs": [],
    "source": [
     "# A single trial is one family (of four children)\n",
-    "family = rng.integers(0, 2, 4)\n",
+    "family = rng.choice([0, 1], size=4)\n",
     "count = np.sum(family)\n",
     "# The count should be between 0 and 4 inclusive.\n",
     "count"
@@ -61,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98fb824",
+   "id": "65531ba6",
    "metadata": {},
    "source": [
     "Here is the full solution, with the trial logic inside the for-loop."
@@ -70,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b33c5654",
+   "id": "c6f54e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +77,7 @@
     "# Repeat the indented stuff 10000 times.\n",
     "for i in np.arange(10000):\n",
     "    # The procedure for one family.\n",
-    "    family = rng.integers(0, 2, 4)\n",
+    "    family = rng.choice([0, 1], size=4)\n",
     "    count = np.sum(family)\n",
     "    # Fill in the corresponding value in the counts_girls array.\n",
     "    counts_girls[i] = count\n",
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01738746",
+   "id": "8e3fee8e",
    "metadata": {},
    "source": [
     "### No girls in a family of four\n",
@@ -106,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf03bd20",
+   "id": "edb39e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "604cba5d",
+   "id": "9b24cdcb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9249c980",
+   "id": "9c47f2b2",
    "metadata": {},
    "source": [
     "For extra points - the answer above is easier to work out with probability\n",
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "776afa53",
+   "id": "0b20bfdd",
    "metadata": {},
    "source": [
     "Edit this code cell to give your answer.\n"
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292751ba",
+   "id": "8c6a0259",
    "metadata": {},
    "source": [
     "### Three girls in a family of five\n",
@@ -158,13 +155,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f55f2a",
+   "id": "178d9ca6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#- Logic for a single trial.\n",
     "#- A single trial is one family (of five children)\n",
-    "family = rng.integers(...)\n",
+    "family = rng.choice(...)\n",
     "count = np.sum(family)\n",
     "# The count should be between 0 and 5 inclusive.\n",
     "count"
@@ -172,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7f71fd",
+   "id": "5391024c",
    "metadata": {},
    "source": [
     "Now adapt the for-loop a few cells above, adding your single-trial logic, just\n",
@@ -182,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bb1d1e8",
+   "id": "a6e99dee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9faed9",
+   "id": "69e45d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af64e12",
+   "id": "5e40379a",
    "metadata": {},
    "source": [
     "### Three or fewer girls in a family of five\n",
@@ -219,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c40653",
+   "id": "78c248fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff9b36f",
+   "id": "19e2069f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3101dd84",
+   "id": "05407ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8721a90",
+   "id": "843b423a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f43affd",
+   "id": "6b29c5f7",
    "metadata": {},
    "source": [
     "Hints: you have already done a simulation above that you can use to answer\n",
@@ -269,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ffc5e1",
+   "id": "05a13b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feac43a7",
+   "id": "958e6815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80783664",
+   "id": "aeff1482",
    "metadata": {},
    "source": [
     "### More realistic simulation\n",
@@ -316,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8292568e",
+   "id": "e73fd3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae50df32",
+   "id": "83669a5e",
    "metadata": {},
    "source": [
     "Hint 2: Let's say I have a random number `x` between 0 and 1:"
@@ -335,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d18df4",
+   "id": "5b079e76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06017382",
+   "id": "24e1bad0",
    "metadata": {},
    "source": [
     "The probability that that some returned `x` will be less than - say - 0.25, is 0.25.\n",
@@ -356,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f041d451",
+   "id": "efdbd065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3223f1",
+   "id": "c58eb4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad17e426",
+   "id": "50e30b48",
    "metadata": {},
    "source": [
     "Now put this logic into your for-loop, to simulate the numbers with the modified chance of a girl."
@@ -394,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09fedee",
+   "id": "89fa3460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "643d60b3",
+   "id": "7eba7034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057b6b4d",
+   "id": "7bb454d8",
    "metadata": {},
    "source": [
     "## Done.\n",
@@ -434,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2e4b88",
+   "id": "43751c86",
    "metadata": {},
    "outputs": [],
    "source": [
